k8s/todo/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-srv
spec:
  type: ClusterIP
  selector:
    app: todo-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
